fixed letter spacing

--- a/src/components/css/faq_unit.scss
+++ b/src/components/css/faq_unit.scss
@@ -25,9 +25,10 @@
     .answer {
         display: none;
         padding: 1.25rem 2.5rem;
-        line-height: 2.1875rem;
+        line-height: 33px;
         font-size: 1.5rem;
-        letter-spacing: 0.1em;
+        letter-spacing: 0.02em;
+
         color: #B2B2B2;
         background: #F7F8F9;
         cursor: pointer;
